--- a/public/sass/_mixins.scss
+++ b/public/sass/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin border-radius($radius) {
+@mixin the-border-radius($radius) {
   -webkit-border-radius: $radius;
       -ms-border-radius: $radius;
           border-radius: $radius;
